--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 :ID:       ac338634-949e-4e3a-8d75-45bed92243c6
 :CATEGORY: KRIA
 :END:
-#+title: Setting up and using 
+#+title: Setting up and using
 #+title: Xilinx KRIA KV260
 #+filetags: :export:
 #+subtitle: \begin{CJK}{UTF8}{min}南山大学\end{CJK}
@@ -10,7 +10,7 @@
 #+email: vincent.conus@protonmail.com
 #+date: 2023-8-30
 
-* Headers and LaTeX settings for export                               :noexport:
+* Headers and LaTeX settings for export                            :noexport:
 A large amount of headers and parameters are needed in order
 to have this "README" document being exportable as a LaTeX
 document formatted the way I wanted it to be.
@@ -71,7 +71,7 @@ and stays hidden in a :noexport: section in this report.
        "\\pagebreak\n"))
 #+end_src
 
-* Building this report from the LaTeX file                            :noexport:
+* Building this report from the LaTeX file                         :noexport:
 The base file for this report is actually this README.org file itself.
 However, upon local build, this file is regularly exported as
 a ~.tex~ file that can be built normally.
@@ -106,12 +106,11 @@ are trying to archive.
 #+NAME: fig:map
 [[file:./img/map.png]]
 
-
 * Boot firmware
 #+INCLUDE: "./boot_firmware.org" :minlevel 2
 ** COMMENT LINK: [[file:boot_firmware.org][Boot firmware]]
 
-* Installing Linux
+* Installing Linux (Ubuntu LTS 22.04 option)
 Withe the boot firmware being up-to-date, we can proceed to install a Linux distribution
 on our Kria board. The step needed to archive a full installation of Ubuntu LTS 22.04
 will be presented in this section[fn:7]. The figure [[fig:map_linux]] below shows
@@ -249,7 +248,6 @@ sudo apt-get dist-upgrade
 sudo reboot now
 #+END_SRC
 
-
 *** Static IP address
 A static IP can be set by writing the following
 configuration into your ~netplan~ configuration file.
@@ -332,6 +330,15 @@ not to be used:
   sudo apt-get autoclean
   sudo reboot now
 #+END_SRC
+
+* Installing Linux (PetaLinux option)
+This part is an alternative to the previous section [[]], where the installation
+of PetaLinux as a host system[fn:24] will be presented, as being an alternative to the
+Ubuntu LTS. Here are some reasonings why you'd prefer to use PetaLinux instead
+of Ubuntu:
++ Direct support from Xilinx. While Ubuntu is also an official port, it is
+  provided through Canonical.
++ If you plan to use ROS2 in containers.
 
 * Enabling ~remoteproc~
 One of the advantage of this Kria board, as cited previously, is the presence of
@@ -721,11 +728,11 @@ then we can build the library with the following ros2 command:
   wget https://gitlab.com/sunoc/xilinx-kria-kv260-\
   documentation/-/raw/main/src/custom_r5f_colcon.meta
 
-  cp -r /armr5-toolchain/ \$(pwd)/firmware/toolchain && \
-  export PATH=\$PATH:\$(pwd)/firmware/toolchain/bin
+  cp -r /armr5-toolchain/ $(pwd)/firmware/toolchain && \
+  export PATH=$PATH:$(pwd)/firmware/toolchain/bin
 
   ros2 run micro_ros_setup build_firmware.sh \
-  \$(pwd)/custom_r5f_toolchain.cmake \$(pwd)/\
+  $(pwd)/custom_r5f_toolchain.cmake $(pwd)/\
   custom_r5f_colcon.meta
 #+END_SRC
 #+LATEX: \pagebreak
@@ -960,7 +967,6 @@ return of the board (typically a ~/dev/ttyUSB1~), but two things are to be noted
   the RPMsg system worked successfully.
 #+LATEX: \pagebreak
 
-  
 * Running a ROS2 node
 This section as well as the next one are rather "separated" from the rest of the report, as
 they are focused on the ROS2 system being used on the Kria board.
@@ -1092,7 +1098,6 @@ in the figure [[fig:hello-docker]] below, after the commands:
 #+NAME: fig:hello-docker
 [[file:./img/hello-docker.png]]
 
-
 *** Running a ROS2 container
 The following commands will pull a ROS container, version ~iron~, and name it ~ros_build~.
 
@@ -1148,8 +1153,7 @@ the ping-pong topic communication from a different shell[fn:17]:
 #+END_SRC
 #+LATEX: \pagebreak
 
-
-* micro-ROS XRCE-DDS Agent                               
+* micro-ROS XRCE-DDS Agent
 The micro-ROS Agent on the ROS2 side is the last piece of the puzzle needed to
 allow our DDS environment to use RPMsg as a mean of communication, as visible
 on the schematic of the figure [[fig:map_agent]] below.
@@ -1279,7 +1283,7 @@ These command allows to go build the agent and run it with maximum verbosity (fo
 
 #+LATEX: \pagebreak
 
-* Running the ping-pong node                                  :WORK_IN_PROGRESS:
+* Running the ping-pong node                               :WORK_IN_PROGRESS:
 A custom ping-pong node for ROS2 was developed in order to test the data transfer of the newly created
 Agent / Client system.
 
@@ -1290,7 +1294,7 @@ In order to have this node up and running, you need to set basically all the pre
 - This ping-pong application is released as a ROS2 Python node. It is best to pull and run it
   in a ROS2 environment to avoid having dependencies issues, as presented in the section [[Running a ROS2 node]].
   
-* Conclusion & future                                         :WORK_IN_PROGRESS:
+* Conclusion & future                                      :WORK_IN_PROGRESS:
 
 
 #+LATEX: \pagebreak
@@ -1360,8 +1364,10 @@ directly at the ~libmicroros_kv260~ repository: [[https://gitlab.com/sunoc/libmi
   #endif // _ALLOCATORS_H_
 #+END_SRC
 
-
 * Footnotes
+[fn:24] It is to be noted that for this part, the "other" KRIA board (KR260) was
+used instead of the KV260 that was being used for everything tried on top of
+Ubuntu. No significan difference should be noted.
 
 [fn:23] micro-ROS Client firmware version 0.1, the first working version: https://gitlab.com/sunoc/libmicroros_kv260/-/tree/0.1
 
@@ -1381,12 +1387,12 @@ the container in which the previous setup were install, not on the host running 
 The hostname should help you to figure out where you are.
 
 [fn:16] This is an example and this situation can become a security issue. It would be a better practice
-in a production environment to map only the devices that are actually in use. 
+in a production environment to map only the devices that are actually in use.
 
 [fn:15] This command installs a complete "desktop" version of ROS2, containing many
 useful package for our project.
 If space is a constraint, different, less complete packages can be install.
-Please refer to the official documentation about it. 
+Please refer to the official documentation about it.
 
 [fn:14] The ~curl~ command from the guide does not work through the school proxy,
 but the command ~wget~ used instead does work. The key is then moved to the correct spot with ~mv~. 
@@ -1399,7 +1405,7 @@ tested for this guide. In case of doubt or problem, please refer to the official
 [fn:12] It is also important to note that the ~echo_test~ part is specific for the
 RPMsg base demonstration firmware. It is not to be used for other firmware.
 The instruction to build and use this particular program on the Kria Linux
-is visible in the section [[RPMsg ~echo_test~ software]]. 
+is visible in the section [[RPMsg ~echo_test~ software]].
 
 [fn:11] In this sequence, we are entering a root shell with ~sudo -s~, but this can
 also be archived by putting the commands in a script to be executed with ~sudo~. 
@@ -1411,7 +1417,7 @@ Obviously, the ~SSH~ connection parameters will also be specific to your case.
 The ~ubuntu@192.168.1.10~ set here are merely an example.
 
 [fn:9] Both files are also visible in the appendixes [[Custom toolchain CMake settings]]
-and [[Custom Colcon meta settings]] the end of this report.} 
+and [[Custom Colcon meta settings]] the end of this report.}
 
 [fn:8] If Docker is not set up on your machine, you can follow the guide on [[https://docs.docker.com/engine/install/ubuntu/][the official website]].
 When you can successfully run the "hello-world" container, you are good to go.
@@ -1436,4 +1442,4 @@ cannot be remove before the package(s) that depends on them,
 thus the specific delete order.
 
 [fn:1] Again, it is _critical_ to be 100\% certain that you are working with
-the correct device! 
+the correct device!
